Add tests for Loan services