@@ -5,15 +5,13 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
-import org.springframework.boot.test.autoconfigure.orm.jpa.TestEntityManager;
 import org.springframework.dao.InvalidDataAccessApiUsageException;
 
 import java.time.LocalDateTime;
 import java.util.Arrays;
+import java.util.List;
 
-import static cz.muni.fi.pa165.library.Utils.createTestBook1984;
-import static cz.muni.fi.pa165.library.Utils.createTestBookAnimalFarm;
-import static cz.muni.fi.pa165.library.Utils.createTestUser;
+import static cz.muni.fi.pa165.library.Utils.*;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.containsInAnyOrder;
 import static org.hamcrest.Matchers.empty;
@@ -62,18 +60,9 @@ public class LoanRepositoryTest {
      */
     @Test
     public void createLoanWithTwoSingleLoans() {
-        SingleLoan singleLoan1 = new SingleLoan();
-        singleLoan1.setBook(animalFarm);
-        singleLoan1.setUser(user);
-        singleLoan1.setBorrowedAt(LocalDateTime.of(2020, 1, 1, 12, 0));
-
-        SingleLoan singleLoan2 = new SingleLoan();
-        singleLoan2.setBook(book1984);
-        singleLoan2.setUser(user);
-        singleLoan2.setBorrowedAt(LocalDateTime.of(2020, 1, 1, 12, 0));
-
-        Loan loan = new Loan();
-        loan.setSingleLoans(Arrays.asList(singleLoan1, singleLoan2));
+        SingleLoan singleLoan1 = createSingleLoan(animalFarm, user, LocalDateTime.of(2020, 1, 1, 12, 0));
+        SingleLoan singleLoan2 = createSingleLoan(book1984, user, LocalDateTime.of(2020, 1, 1, 12, 0));
+        Loan loan = createLoan(List.of(singleLoan1, singleLoan2));
         loanRepository.save(loan);
 
         assertThat(loanRepository.findAll(), containsInAnyOrder(loan));
@@ -82,18 +71,9 @@ public class LoanRepositoryTest {
 
     @Test
     public void deletingLoanTransitivelyDeletesSingleLoansButNotUserOrBook() {
-        SingleLoan singleLoan1 = new SingleLoan();
-        singleLoan1.setBook(animalFarm);
-        singleLoan1.setUser(user);
-        singleLoan1.setBorrowedAt(LocalDateTime.of(2020, 1, 1, 12, 0));
-
-        SingleLoan singleLoan2 = new SingleLoan();
-        singleLoan2.setBook(book1984);
-        singleLoan2.setUser(user);
-        singleLoan2.setBorrowedAt(LocalDateTime.of(2020, 1, 1, 12, 0));
-
-        Loan loan = new Loan();
-        loan.setSingleLoans(Arrays.asList(singleLoan1, singleLoan2));
+        SingleLoan singleLoan1 = createSingleLoan(animalFarm, user, LocalDateTime.of(2020, 1, 1, 12, 0));
+        SingleLoan singleLoan2 = createSingleLoan(book1984, user, LocalDateTime.of(2020, 1, 1, 12, 0));
+        Loan loan = createLoan(List.of(singleLoan1, singleLoan2));
         loanRepository.save(loan);
 
         assertThat(loanRepository.findAll(), containsInAnyOrder(loan));
